# mm-bp-snn

./: .gitignore  CMakeLists.txt  README.md  main.cpp  net.cu  net_spiking.cu  net_spiking.cuh
Config/: NMnistConfig.txt  NMnistConfig_softmax.txt  NMnistConfig_test.txt  NMnistConfig_test_bias.txt  NMnistConfig_test_complete.txt  NMnistConfig_test_dynamicvth.txt  NMnistConfig_test_reservoir.txt  SpikingCNNMnistConfig.txt  SpikingCNNMnistConfig_test.txt  SpikingCNNMnistConfig_test_softmax.txt  SpikingMnistConfig.txt  SpikingMnistConfig_test.txt  SpokenLetterConfig.txt  SpokenLetterConfig_test.txt  SpokenLetterConfig_test_dynamicvth.txt
Result/: checkPoint_cnn_best.txt  log_best_cnn.txt  log_beta=0.01_15_15_best_nmnist.txt  log_beta=0.01_best_nmnist.txt  log_clean_se=0.5_ts=8_beta=0.04_hvth=20_ovth=10_mnist_best.txt
common/: Config.cpp  Config.h  cuBase.cu  cuBase.h  cuMatrix.h  cuMatrixVector.h  util.cpp  util.h
dataAugmentation/: cuTransformation.cu  cuTrasformation.cu
layers/: BranchLayer.h  CombineLayer.h  Conv.h  ConvCFM.h  ConvSpiking.cu  ConvSpiking.h  DataLayer.cu  DataLayer.h  DataLayerSpiking.cu  DataLayerSpiking.h  FullConnect.h  LRN.h  LayerBase.cpp  LayerBase.h  LocalConnect.h  NIN.h  One.h  Pooling.h  PoolingSpiking.cu  PoolingSpiking.h  SoftMax.cu  SoftMax.h  SoftMaxSpiking.cu  SoftMaxSpiking.h  Spiking.cu  Spiking.h
nmnist/: NMNIST_Converter.m
readData/: readMnistData.cpp  readMnistData.h  readNMnistData.cpp  readNMnistData.h  readSpeechData.cpp  readSpeechData.h
test/: README.md
test/golden/cnn_mnist/weights/: conv1_info_trained.txt  (+4 more)
(+22 files in other folders)
